--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main{
+  width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+}
+
+h1{
+  margin-top: 20px;
+  font-size: 40px;
+  padding: 10px;
+  font-family: cursive;
+}
+.search-containre{
+  padding: 20px;
+  display: flex;
+  gap: 10px;
+}
+
+.search-containre input, .search-containre button{
+  font-size: 20px;
+  padding: 10px;
+}
+.search-containre button, .tag-container button{
+  background-color: rgb(25, 9, 40);
   color: white;
+  border-radius: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.tag-container{
+  display: flex;
+  gap: 10px;
 }
+.tag-container button{
+  font-size: 16px;
+  padding: 5px;
+}
+.image-container{
+  display: flex;
+  flex-direction: column;
+  width: 93%;
+  align-items: center;
+}
+.image-container div{
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.image-container div img{
+  width: 200px;
+  height: 250px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+h2{
+  padding: 20px;
 }
